# c_plus_plus_catch2

./: CMakeLists.txt  README.md
include/: Avaliador.hpp
src/: Avaliador.cpp
tests/: teste-avaliador.cpp
